--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">Laura Quaynor</a></h1>
+							<p>A responsive, thoughtful, bilingual professor at Lewis University.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
