--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div id="features-wrapper">
 					<section id="features" class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>All readers, behold! She is <strong>Strongly Opinionated</strong>!</h2>
 						</header>
 						<div class="row">
 							<div class="4u 12u(mobile)">
